tests/paczka1/small_fuzzy/89530491.err
Error in line 1: fjhO6XS5BfT A257 2,6
Error in line 2: yP54fA0MO A846 67,5
Error in line 5: yP54fA0MO A103 74,8
Error in line 9: y1ddinUIp A846 6,1
Error in line 6: yP54fA0MO S135 17,9
Error in line 7: fjhO6XS5BfT A103 310,3
